crates/jolt_java_syntax/tests/snapshots/corpus__syntax__lexer__accepts_alternate_hexadecimal_minimum_floating_point_literals.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
0x0.000002P-126f 0x0.0_0000_0000_0001P-1022

syntax:
syntax:
CompilationUnit
  ErrorNode
    FloatingPointLiteral "0x0.000002P-126f" @ 0..16 trailing=[Whitespace " "]
    FloatingPointLiteral "0x0.0_0000_0000_0001P-1022" @ 17..43
  Eof "" @ 43..43

diagnostics:
  code=java.parse.unexpected_syntax severity=Error stage=Parser range=0..16 message="unexpected token at top level"

diagnostics:
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(0), end: TextSize(16) }) message=unexpected token at top level
