crates/jolt_java_syntax/tests/snapshots/corpus__syntax__lexer__accepts_floating_point_literals_without_semantic_range_checks.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
3.4028235e38f 1.4e-45f 1.7976931348623157e308 4.9e-324 3.5e38f 1e-46f 1e309 1e-325

syntax:
syntax:
CompilationUnit
  CompilationUnitItemList
    BogusCompilationUnitItem
      FloatingPointLiteral "3.4028235e38f" @ 0..13 trailing=[Whitespace " "]
      FloatingPointLiteral "1.4e-45f" @ 14..22 trailing=[Whitespace " "]
      FloatingPointLiteral "1.7976931348623157e308" @ 23..45 trailing=[Whitespace " "]
      FloatingPointLiteral "4.9e-324" @ 46..54 trailing=[Whitespace " "]
      FloatingPointLiteral "3.5e38f" @ 55..62 trailing=[Whitespace " "]
      FloatingPointLiteral "1e-46f" @ 63..69 trailing=[Whitespace " "]
      FloatingPointLiteral "1e309" @ 70..75 trailing=[Whitespace " "]
      FloatingPointLiteral "1e-325" @ 76..82
  Eof "" @ 82..82

diagnostics:
  code=java.parse.unexpected_syntax severity=Error stage=Parser range=0..13 message="unexpected token at top level"

diagnostics:
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(0), end: TextSize(13) }) message=unexpected token at top level
