crates/jolt_java_syntax/tests/snapshots/corpus__syntax__lexer__attaches_trailing_line_comment_before_newline.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
int x; // trailing
class A {}

syntax:
syntax:
CompilationUnit
  FieldDeclaration
    PrimitiveType
      IntKw "int" @ 0..3 trailing=[Whitespace " "]
    VariableDeclaratorList
      VariableDeclarator
        Identifier "x" @ 4..5
    Semicolon ";" @ 5..6 trailing=[Whitespace " ", LineComment "// trailing"]
  ClassDeclaration
    ClassKw "class" @ 19..24 leading=[Newline "\n"] trailing=[Whitespace " "]
    Identifier "A" @ 25..26 trailing=[Whitespace " "]
    ClassBody
      LBrace "{" @ 27..28
      RBrace "}" @ 28..29
  Eof "" @ 29..29

diagnostics:
  (none)

diagnostics:
(none)
