crates/jolt_java_syntax/tests/snapshots/corpus__syntax__lexer__block_comments_close_after_repeated_stars.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
int a; /****/ int b;

syntax:
syntax:
CompilationUnit
  CompilationUnitItemList
    FieldDeclaration
      PrimitiveType
        AnnotationList
        IntKw "int" @ 0..3 trailing=[Whitespace " "]
      VariableDeclaratorList
        VariableDeclarator
          Identifier "a" @ 4..5
      Semicolon ";" @ 5..6 trailing=[Whitespace " ", DocComment "/****/", Whitespace " "]
    FieldDeclaration
      PrimitiveType
        AnnotationList
        IntKw "int" @ 14..17 trailing=[Whitespace " "]
      VariableDeclaratorList
        VariableDeclarator
          Identifier "b" @ 18..19
      Semicolon ";" @ 19..20
  Eof "" @ 20..20

diagnostics:
  (none)

diagnostics:
(none)
