crates/jolt_java_syntax/tests/snapshots/corpus__syntax__lexer__block_comments_may_contain_line_terminators.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
int a; /* one
 two
 three */ int b;

syntax:
syntax:
CompilationUnit
  FieldDeclaration
    PrimitiveType
      IntKw "int" @ 0..3 trailing=[Whitespace " "]
    VariableDeclaratorList
      VariableDeclarator
        Identifier "a" @ 4..5
    Semicolon ";" @ 5..6 trailing=[Whitespace " "]
  FieldDeclaration
    PrimitiveType
      IntKw "int" @ 31..34 leading=[BlockComment "/* one\n two\r\n three\r */", Whitespace " "] trailing=[Whitespace " "]
    VariableDeclaratorList
      VariableDeclarator
        Identifier "b" @ 35..36
    Semicolon ";" @ 36..37
  Eof "" @ 37..37

diagnostics:
  (none)

diagnostics:
(none)
